Fix wrong color for active item.

--- a/src/components/Navigation/NavigationItem/NavigationItem.module.css
+++ b/src/components/Navigation/NavigationItem/NavigationItem.module.css
@@ -16,7 +16,7 @@
 .NavigationItem a:hover,
 .NavigationItem a:active,
 .NavigationItem a.active {
-	color: #8F5C2C;
+	color: #40A4C8;
 }
 
 @media(min-width: 500px) {
